--- a/package.json
+++ b/package.json
@@ -1,36 +1,46 @@
 {
   "name": "yam",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "vitest --run",
+    "build": "tsc --watch",
+    "typecheck": "tsc --noEmit",
+    "dev": "tsx src/index.ts",
     "lint": "eslint .",
-    "format": "prettier --write .",
+    "format": "prettier . --write",
     "prepare": "husky"
+  },
+  "bin": {
+    "yam": "dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "lint-staged": {
-    "*.{js, jsx,ts,tsx}": [
-      "eslint --quiet --fix"
-    ],
-    "*.{json,js,ts,jsx,tsx,html}": [
-      "prettier --write --ignore-unknown"
-    ]
-  },
   "packageManager": "pnpm@10.2.0+sha512.0d27364e0139c6aadeed65ada153135e0ca96c8da42123bd50047f961339dc7a758fc2e944b428f52be570d1bd3372455c1c65fa2e7aa0bfbf931190f9552001",
   "devDependencies": {
     "@eslint/js": "^9.24.0",
-    "@types/jest": "^29.5.14",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^22.14.1",
     "eslint": "^9.24.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
     "lint-staged": "^15.5.1",
     "prettier": "3.5.3",
-    "ts-jest": "^29.3.1",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.1"
+    "typescript-eslint": "^8.29.1",
+    "vitest": "^3.1.1"
+  },
+  "dependencies": {
+    "chalk": "^5.4.1",
+    "commander": "^13.1.0",
+    "dist": "link:dist",
+    "enquirer": "^2.4.1",
+    "fs-extra": "^11.3.0"
+  },
+  "pnpm": {
+    "overrides": {}
   }
 }
