--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,23 +14,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v3
+        with:
+          version: 10.2.0
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Lint code
-        run: npm run lint
+        run: pnpm lint
 
-      - name: format code
-        run: npm run format:check
+      - name: Check formatting
+        run: pnpm format:check
 
       - name: Run Tests
-        run: npm test
+        run: pnpm test
 
       - name: Build project
-        run: npm run build
+        run: pnpm build
