--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,14 +28,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Lint code
-        run: pnpm lint
-
-      - name: Check formatting
-        run: pnpm format:check
-
-      - name: Run Tests
-        run: pnpm test
+      # - name: Lint code
+      #   run: pnpm lint
+      #
+      # - name: Check formatting
+      #   run: pnpm format:check
+      #
+      # - name: Run Tests
+      #   run: pnpm test
 
       - name: Build project
         run: pnpm build
