--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,12 +1,12 @@
-name: Generate Release and Publish to NPM 
+name: Generate Release and Publish to NPM
 
 permissions:
   contents: write
 
 on:
   push:
-    branches: [main]
-    tags: ['v*.*.*']
+    tags:
+      - 'v*'
 
 jobs:
   publish:
